# quarry

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-PACKAGERS  README-TRANSLATORS  THANKS  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
aux/: list.make  omf.make  xmldocs.make
data/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  gtkrc  quarry.desktop.in  quarry.xml
data/markup-themes/: Makefile.am  Makefile.in
data/markup-themes/bold/: Makefile.am  Makefile.in  theme.cfg
data/markup-themes/default/: Makefile.am  Makefile.in  theme.cfg
data/markup-themes/filled/: theme.cfg
data/textures/: Makefile.am  Makefile.in
help/: ChangeLog  Makefile.am  Makefile.in  quarry-help.css  quarry-help.sed
help/C/: .cvsignore  Makefile.am  Makefile.in  authors.xml  fdl.xml  legal.xml  quarry-C.omf  quarry.html  quarry.xml
help/de/: Makefile.am  Makefile.in  fdl.xml  quarry-de.omf  quarry.xml
po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  en.po  en_GB.po  fr.po  pl.po  quarry.pot  ru.po
src/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  gettext.h  quarry-main.h  quarry.c  quarry.h
src/board/: .cvsignore  Makefile.am  Makefile.in  amazons.c  amazons.h  board-internals.h  board-topology.h  board.c  board.h  game-info.h  games.list  go.c  go.h  othello.c  othello.h  parse-game-list.c  reversi.c  reversi.h
src/gtp/: .cvsignore  Makefile.am  Makefile.in  gtp-client.c  gtp-client.h  gtp-test.c
src/gui-gtk/: .cvsignore  Makefile.am  Makefile.in  gtk-add-or-edit-label-dialog.c  gtk-add-or-edit-label-dialog.h  gtk-assistant.c  gtk-assistant.h  gtk-clock.c  gtk-clock.h  gtk-color-button.c  gtk-color-button.h  gtk-configuration-structures.c  gtk-configuration-structures.h  gtk-configuration.list  gtk-control-center.c  gtk-control-center.h  gtk-file-dialog.c  gtk-file-dialog.h  gtk-file-selector.c  gtk-file-selector.h  gtk-freezable-spin-button.c  gtk-freezable-spin-button.h  gtk-game-info-dialog.c  gtk-game-info-dialog.h  gtk-games.c  gtk-games.h  gtk-go-to-named-node-dialog.c  gtk-go-to-named-node-dialog.h  gtk-goban-base.c  gtk-goban-base.h  gtk-goban-window.c  gtk-goban-window.h  gtk-goban.c  gtk-goban.h  gtk-gtp-client-interface.c  gtk-gtp-client-interface.h  gtk-help.c  gtk-help.h  gtk-named-vbox.c  gtk-named-vbox.h  (+50 more)
src/gui-utils/: .cvsignore  Makefile.am  Makefile.in  common-configuration-defaults.list  common-configuration-sections.list  common-configuration-values.list  configuration-internals.h  configuration.c  configuration.h  gui-utils.c  gui-utils.h  markup-theme-configuration.list  parse-configuration.c  tile-renderer.c  tile-renderer.h  tile-set.c  tile-set.h  time-control.c  time-control.h
src/sgf/: .cvsignore  Makefile.am  Makefile.in  parse-sgf-list.c  sgf-diff-utils.c  sgf-diff.c  sgf-errors.list  sgf-parser.c  sgf-parser.h  sgf-privates.h  sgf-properties.list  sgf-test.c  sgf-tree-map.c  sgf-tree.c  sgf-undo-operations.list  sgf-undo.c  sgf-undo.h  sgf-utils.c  sgf-writer.c  sgf-writer.h  sgf.h
src/utils/: Makefile.am  Makefile.in  buffered-writer.c  format.c  getopt.c  getopt.h  getopt1.c  memory-pool.c  object-cache.c  parse-list.c  parse-list.h  string-buffer.c  string-list.c  utils.c  utils.h
