# Process this file with Automake to produce `Makefile.in'.

nobase_dist_theme_DATA =	\
	default/circle.svg	\
	default/cross.svg	\
	default/selected.svg	\
	default/square.svg	\
	default/triangle.svg	\
				\
	default/theme.cfg	\
				\
	bold/circle.svg		\
	bold/cross.svg		\
	bold/selected.svg	\
	bold/square.svg		\
	bold/triangle.svg	\
				\
	bold/theme.cfg		\
				\
	filled/circle.svg	\
	filled/cross.svg	\
	filled/selected.svg	\
	filled/square.svg	\
	filled/triangle.svg	\
				\
	filled/theme.cfg

themedir =				\
	$(datadir)/quarry/markup-themes


DISTCLEANFILES =	\
	*~		\
			\
	default/*~	\
	bold/*~		\
	filled/*~
